# throughput

./: .gitignore  Makefile  Makefile.am  adaptive_throughput.py  basic_throughput.py  benchmark.py  configure.ac  numa.py  procinfo.py  reader.cc  redhawk-benchmark  speedometer.py  throughput.cc  transport.cc  transport.h  transport.hh  utils.py  writer.cc
benchmark/: csv.py  numa.py  procinfo.py  tests.py
common/: threaded_deleter.h
corba/: .gitignore  Makefile  Makefile.am  __init__.py  reader.cc  writer.cc
corba/idl/: rawdata.idl
raw/: Makefile  __init__.py  reader.cc  writer.cc
rhbulkio/: .gitignore  __init__.py
rhbulkio/reader/: .md5sums  reader.prf.xml
rhbulkio/reader/cpp/: Makefile.am  configure.ac  main.cpp  reader.cpp
rhbulkio/writer/: .md5sums  writer.prf.xml
rhbulkio/writer/cpp/: .md5sums  configure.ac
streams/: aggregate.py
streams/bulkio/: __init__.py
streams/bulkio/reader/: reader.prf.xml  reader.spd.xml
streams/bulkio/reader/cpp/: .md5sums  Makefile.am  main.cpp  reader.cpp  reader.h  reader_base.cpp  reader_base.h
streams/bulkio/writer/: writer.prf.xml  writer.spd.xml
streams/bulkio/writer/cpp/: Makefile.am  main.cpp  writer.cpp  writer.h  writer_base.cpp  writer_base.h
streams/corba/: Makefile.am  __init__.py  reader.cc  reader.cpp  writer.cpp
streams/corba/idl/: rawdata.idl
streams/raw/: Makefile.am  __init__.py  control.cc  control.cpp  control.h  reader.cc  reader.cpp  writer.cc
threaded/: Makefile  transport.cc  transport.hh
tools/: basic_throughput.py
